WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190560
[Apple Pay] New shipping methods are ignored when updating after the shippingaddresschange event
https://bugs.webkit.org/show_bug.cgi?id=190560
Summary
[Apple Pay] New shipping methods are ignored when updating after the shipping...
Andy Estes
Reported
2018-10-14 02:33:13 PDT
[Apple Pay] New shipping methods are ignored when updating after the shippingaddresschange event
Attachments
Patch
(13.59 KB, patch)
2018-10-14 02:39 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(14.58 KB, patch)
2018-10-15 12:47 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2018-10-14 02:33:24 PDT
rdar://problem/44559075
Andy Estes
Comment 2
2018-10-14 02:39:30 PDT
Created
attachment 352274
[details]
Patch
youenn fablet
Comment 3
2018-10-14 20:08:37 PDT
Comment on
attachment 352274
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=352274&action=review
> Source/WebCore/Modules/applepay/paymentrequest/ApplePayPaymentHandler.cpp:266 > + }
I guess there is some existing code that extracts shipping methods from shipping options. Would it be worth to share the code?
> Source/WebCore/testing/MockPaymentCoordinator.cpp:115 > + return applePayShippingMethods;
Maybe WTF::map if you like it.
Andy Estes
Comment 4
2018-10-15 12:43:49 PDT
Comment on
attachment 352274
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=352274&action=review
>> Source/WebCore/Modules/applepay/paymentrequest/ApplePayPaymentHandler.cpp:266 >> + } > > I guess there is some existing code that extracts shipping methods from shipping options. > Would it be worth to share the code?
Yup, good call.
>> Source/WebCore/testing/MockPaymentCoordinator.cpp:115 >> + return applePayShippingMethods; > > Maybe WTF::map if you like it.
Very nice.
Andy Estes
Comment 5
2018-10-15 12:47:30 PDT
Created
attachment 352363
[details]
Patch
WebKit Commit Bot
Comment 6
2018-10-15 14:11:06 PDT
Comment on
attachment 352363
[details]
Patch Clearing flags on attachment: 352363 Committed
r237142
: <
https://trac.webkit.org/changeset/237142
>
WebKit Commit Bot
Comment 7
2018-10-15 14:11:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug